--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@react-google-maps/api": "^2.20.6",
     "antd": "^5.12.2",
     "axios": "^1.6.2",
     "react": "^18.2.0",
