--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node server/server.js",
     "dev": "cd server && npm run dev",
-    "install-server": "cd server && npm install",
+    "install-server": "cd server && npm install --legacy-peer-deps",
     "install-client": "cd client && npm install",
     "install": "npm run install-server && npm run install-client",
-    "build-client": "cd client && npm run build",
-    "heroku-postbuild": "npm run install-client && npm run build-client"
+    "build": "npm run install-server && npm run install-client",
+    "build-client": "cd client && npm run build"
   },
   "engines": {
     "node": ">=14.0.0"
